--- a/.github/workflows/release-grafana-plugin.yml
+++ b/.github/workflows/release-grafana-plugin.yml
@@ -12,7 +12,7 @@ jobs:
       plugin_changed: ${{ steps.check.outputs.plugin_changed }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
@@ -49,15 +49,16 @@ jobs:
     if: needs.check-changes.outputs.plugin_changed == 'true'
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Needed for uploading release assets
-
+      id-token: write
+      contents: write
+      attestations: write
     defaults:
       run:
         working-directory: grafana/plugins/dev-health-panels
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Extract Version
         id: get_version
@@ -100,7 +101,6 @@ jobs:
             fs.appendFileSync(process.env.GITHUB_ENV, `VERSION=${ver}\n`);
           '
 
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -123,93 +123,38 @@ jobs:
       - name: Run Tests
         run: npm run test:ci
 
-      - name: Build Plugin
-        env:
-          PLUGIN_VERSION: ${{ env.VERSION }}
-        run: npm run build
+      - name: Build and Sign Plugin
+        uses: grafana/plugin-actions/build-plugin@v1
+        with:
+          policy_token: ${{ secrets.GRAFANA_ACCESS_POLICY_TOKEN }}
+          path: grafana/plugins/dev-health-panels
 
-      - name: Sign Plugin
-        env:
-          GRAFANA_ACCESS_POLICY_TOKEN: ${{ secrets.GRAFANA_ACCESS_POLICY_TOKEN }}
+      - name: Locate Build Artifacts
+        id: locate
         run: |
-          if [ -n "$GRAFANA_ACCESS_POLICY_TOKEN" ]; then
-            echo "Signing plugin..."
-            npm run sign
-          else
-            echo "GRAFANA_ACCESS_POLICY_TOKEN not found. Skipping signing."
-            echo "To sign the plugin, please create a GRAFANA_ACCESS_POLICY_TOKEN secret in your repository."
+          # The action creates the zip in the plugin directory (or check where it puts it)
+          # It typically names it <plugin-id>-<version>.zip
+          
+          # Find the zip file
+          ZIP_FILE=$(find . -maxdepth 1 -name "*.zip" | head -n 1)
+          
+          if [ -z "$ZIP_FILE" ]; then
+            echo "No zip file found!"
+            ls -la
+            exit 1
           fi
-
-      - name: Get Plugin Metadata
-        id: metadata
-        run: |
-          echo "version=${{ env.VERSION }}" >> $GITHUB_OUTPUT
-          # Better to get ID from plugin.json directly as it is the true ID
-          REAL_PLUGIN_ID=$(jq -r .id src/plugin.json)
-          echo "plugin_id=$REAL_PLUGIN_ID" >> $GITHUB_OUTPUT
-
-      - name: Package Plugin
-        run: |
-          PLUGIN_ID=${{ steps.metadata.outputs.plugin_id }}
-          VERSION=${{ steps.metadata.outputs.version }}
           
-          # 1. Package the Compiled Plugin
-          # The built artifacts are in 'dist'
-          # We need to rename 'dist' to the plugin-id for the zip structure
-          mv dist $PLUGIN_ID
-          zip -r $PLUGIN_ID-$VERSION.zip $PLUGIN_ID
+          echo "Found artifact: $ZIP_FILE"
+          echo "ARTIFACT_PATH=$ZIP_FILE" >> $GITHUB_ENV
           
-          # 2. Package the Source Code (Correctly)
-          # We use git archive to get a clean copy of the source for this specific folder
-          # We prefix it with the plugin ID so when extracted it has a root folder
-          # We need to go up to the repo root to run git archive effectively or handle paths carefully
-          
-          echo "Creating source archive..."
-          
-          # Create a temporary directory for the source distribution
-          mkdir -p source-dist/$PLUGIN_ID
-          
-          # Copy all tracked files in the current directory (grafana/plugins/dev-health-panels) 
-          # to the temp dir. We use rsync to respect .gitignore if we weren't clean, 
-          # but here we want specifically what's in git + the package.json version bump we just did.
-          # Since we modified package.json, git archive might be stale for that file.
-          
-          # Copy everything excluding the build artifacts
-          rsync -av . source-dist/$PLUGIN_ID/ \
-            --exclude "node_modules" \
-            --exclude "$PLUGIN_ID" \
-            --exclude "*.zip" \
-            --exclude "*.md5" \
-            --exclude ".git" \
-            --exclude "dist" \
-            --exclude "coverage" \
-            --exclude "source-dist"
-            
-          # Zip it up
-          cd source-dist
-          zip -r ../$PLUGIN_ID-$VERSION-source.zip $PLUGIN_ID
-          cd ..
-          rm -rf source-dist
-
-          # Generate MD5
-          md5sum $PLUGIN_ID-$VERSION.zip > $PLUGIN_ID-$VERSION.zip.md5
-          
-          echo "ARTIFACT_NAME=$PLUGIN_ID-$VERSION.zip" >> $GITHUB_ENV
-          echo "MD5_NAME=$PLUGIN_ID-$VERSION.zip.md5" >> $GITHUB_ENV
-          echo "SOURCE_ARTIFACT_NAME=$PLUGIN_ID-$VERSION-source.zip" >> $GITHUB_ENV
-
-      - name: Validate Plugin
-        run: |
-          PLUGIN_ID=${{ steps.metadata.outputs.plugin_id }}
-          VERSION=${{ steps.metadata.outputs.version }}
-          # Validate using the generated source zip to catch issues early
-          npx @grafana/plugin-validator@latest $PLUGIN_ID-$VERSION.zip --sourceCodeUri file://$(pwd)/$PLUGIN_ID-$VERSION-source.zip
+          # Generate MD5 for consistency with previous workflow
+          md5sum $ZIP_FILE > $ZIP_FILE.md5
+          echo "MD5_PATH=$ZIP_FILE.md5" >> $GITHUB_ENV
 
       - name: Upload Release Assets
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            grafana/plugins/dev-health-panels/${{ env.ARTIFACT_NAME }}
-            grafana/plugins/dev-health-panels/${{ env.MD5_NAME }}
-            grafana/plugins/dev-health-panels/${{ env.SOURCE_ARTIFACT_NAME }}
+            grafana/plugins/dev-health-panels/${{ env.ARTIFACT_PATH }}
+            grafana/plugins/dev-health-panels/${{ env.MD5_PATH }}
