--- a/.github/workflows/release-grafana-plugin.yml
+++ b/.github/workflows/release-grafana-plugin.yml
@@ -56,162 +56,108 @@ jobs:
         working-directory: grafana/plugins/dev-health-panels
     env:
       GRAFANA_ACCESS_POLICY_TOKEN: ${{ secrets.GRAFANA_ACCESS_POLICY_TOKEN }}
+    permissions:
+      id-token: write
+      contents: write
+      attestations: write
     steps:
       - uses: actions/checkout@v5
+      - name: Extract Version
+        id: get_version
+        run: |
+          # Install semver for parsing
+          npm install semver
+
+          # Use node to parse version logic
+          node -e '
+            const semver = require("semver");
+            const ref = process.env.GITHUB_REF;
+            let raw = "";
+
+            if (ref.startsWith("refs/tags/")) {
+              raw = ref.replace("refs/tags/", "");
+            } else {
+              // Fallback to package.json version if not a tag
+              raw = require("./grafana/plugins/dev-health-panels/package.json").version;
+            }
+
+            // 1. Try clean (handles v1.2.3, 1.2.3-beta) - preserves prerelease
+            let ver = semver.clean(raw);
+
+            // 2. If invalid, try coerce (handles 1.2 -> 1.2.0, 1.2.3.4 -> 1.2.3)
+            // Note: coerce strips prerelease tags from invalid strings (e.g. v1.2-beta -> 1.2.0)
+            if (!ver) {
+              const coerced = semver.coerce(raw);
+              if (coerced) ver = coerced.version;
+            }
+
+            // 3. Fail if still null
+            if (!ver) {
+              console.error(`Could not parse a valid SemVer from "${raw}"`);
+              process.exit(1);
+            }
+
+            console.log(`Parsed version: ${ver}`);
+            // Write to GITHUB_ENV
+            const fs = require("fs");
+            fs.appendFileSync(process.env.GITHUB_ENV, `VERSION=${ver}\n`);
+          '
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          persist-credentials: false
-      # - name: Setup Node.js environment
-      #   uses: actions/setup-node@v6
-      #   with:
-      #     node-version: "22"
-      #     cache: "npm"
-      # - name: Check types
-      #   run: npm run typecheck
-      # - name: Lint
-      #   run: npm run lint
-      # - name: Unit tests
-      #   run: npm run test:ci
-      # - name: Build frontend
-      #   run: npm run build
-      # - name: Sign plugin
-      #   run: npm run sign
-      #   if: ${{ env.GRAFANA_ACCESS_POLICY_TOKEN != '' }}
-      # - name: Get plugin metadata
-      #   id: metadata
-      #   run: |
-      #     sudo apt-get install jq
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: grafana/plugins/dev-health-panels/package-lock.json
 
-      #     export GRAFANA_PLUGIN_ID=$(cat dist/plugin.json | jq -r .id)
-      #     export GRAFANA_PLUGIN_VERSION=$(cat dist/plugin.json | jq -r .info.version)
-      #     export GRAFANA_PLUGIN_ARTIFACT=${GRAFANA_PLUGIN_ID}-${GRAFANA_PLUGIN_VERSION}.zip
+      - name: Install dependencies
+        run: npm ci
 
-      #     echo "plugin-id=${GRAFANA_PLUGIN_ID}" >> $GITHUB_OUTPUT
-      #     echo "plugin-version=${GRAFANA_PLUGIN_VERSION}" >> $GITHUB_OUTPUT
-      #     echo "archive=${GRAFANA_PLUGIN_ARTIFACT}" >> $GITHUB_OUTPUT
+      - name: Update package.json version
+        run: npm version ${{ env.VERSION }} --no-git-tag-version --allow-same-version
+      - name: Build Plugin
+        run: npm run build
+      - name: Get Plugin Metadata
+        id: metadata
+        run: |
+          PLUGIN_ID=$(jq -r .id src/plugin.json)
+          VERSION=$(cat dist/plugin.json | jq -r .info.version)
+          echo "plugin_id=$PLUGIN_ID" >> $GITHUB_OUTPUT
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # - name: Package plugin
-      #   id: package-plugin
-      #   run: |
-      #     mv dist ${PLUGIN_ID}
-      #     zip ${ARCHIVE} ${PLUGIN_ID} -r
-      #   env:
-      #     ARCHIVE: ${{ steps.metadata.outputs.archive }}
-      #     PLUGIN_ID: ${{ steps.metadata.outputs.plugin-id }}
+      - name: Package Plugin for Validation
+        run: |
+          PLUGIN_ID=${{ steps.metadata.outputs.plugin_id }}
+          VERSION=${{ steps.metadata.outputs.version }}
+          mv dist $PLUGIN_ID
+          zip -r $PLUGIN_ID-$VERSION.zip $PLUGIN_ID
 
-      # - name: Check plugin.json
-      #   run: |
-      #     npm run validate ${ARCHIVE}
-      #   env:
-      #     ARCHIVE: ${{ steps.metadata.outputs.archive }}
+      - name: Locate Build Artifacts
+        id: locate
+        run: |
+          # The action creates the zip in the plugin directory (or check where it puts it)
+          # It typically names it <plugin-id>-<version>.zip
 
-      # - name: Archive Build
-      #   uses: actions/upload-artifact@v5
-      #   with:
-      #     name: ${{ steps.metadata.outputs.plugin-id }}-${{ steps.metadata.outputs.plugin-version }}
-      #     path: ${{ steps.metadata.outputs.plugin-id }}
-      #     retention-days: 5
+          # Find the zip file
+          ZIP_FILE=$(find . -maxdepth 1 -name "*.zip" | head -n 1)
 
-      - name: Build & Release
-        uses: grafana/plugin-actions/build-plugin@build-plugin/v1.0.2
+          if [ -z "$ZIP_FILE" ]; then
+            echo "No zip file found!"
+            ls -la
+            exit 1
+          fi
+
+          echo "Found artifact: $ZIP_FILE"
+          echo "ARTIFACT_PATH=$ZIP_FILE" >> $GITHUB_ENV
+
+          # Generate MD5 for consistency with previous workflow
+          md5sum $ZIP_FILE > $ZIP_FILE.md5
+          echo "MD5_PATH=$ZIP_FILE.md5" >> $GITHUB_ENV
+
+      - name: Upload Release Assets
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          policy_token: ${{ secrets.GRAFANA_ACCESS_POLICY_TOKEN }}
-
-#      - name: Extract Version
-#        id: get_version
-#        run: |
-#          # Install semver for parsing
-#          npm install semver
-#
-#          # Use node to parse version logic
-#          node -e '
-#            const semver = require("semver");
-#            const ref = process.env.GITHUB_REF;
-#            let raw = "";
-#
-#            if (ref.startsWith("refs/tags/")) {
-#              raw = ref.replace("refs/tags/", "");
-#            } else {
-#              // Fallback to package.json version if not a tag
-#              raw = require("./grafana/plugins/dev-health-panels/package.json").version;
-#            }
-#
-#            // 1. Try clean (handles v1.2.3, 1.2.3-beta) - preserves prerelease
-#            let ver = semver.clean(raw);
-#
-#            // 2. If invalid, try coerce (handles 1.2 -> 1.2.0, 1.2.3.4 -> 1.2.3)
-#            // Note: coerce strips prerelease tags from invalid strings (e.g. v1.2-beta -> 1.2.0)
-#            if (!ver) {
-#              const coerced = semver.coerce(raw);
-#              if (coerced) ver = coerced.version;
-#            }
-#
-#            // 3. Fail if still null
-#            if (!ver) {
-#              console.error(`Could not parse a valid SemVer from "${raw}"`);
-#              process.exit(1);
-#            }
-#
-#            console.log(`Parsed version: ${ver}`);
-#            // Write to GITHUB_ENV
-#            const fs = require("fs");
-#            fs.appendFileSync(process.env.GITHUB_ENV, `VERSION=${ver}\n`);
-#          '
-#
-#      - name: Setup Node.js
-#        uses: actions/setup-node@v4
-#        with:
-#          node-version: '20'
-#          cache: 'npm'
-#          cache-dependency-path: grafana/plugins/dev-health-panels/package-lock.json
-#
-#      - name: Install dependencies
-#        run: npm ci
-#
-#      - name: Update package.json version
-#        run: npm version ${{ env.VERSION }} --no-git-tag-version --allow-same-version
-#
-#      - name: Lint
-#        run: npm run lint
-#
-#      - name: Typecheck
-#        run: npm run typecheck
-#
-#      - name: Run Tests
-#        run: npm run test:ci
-#
-#      - name: Build and Sign Plugin
-#        uses: grafana/plugin-actions/build-plugin@build-plugin/v1.0.2
-#        with:
-#          policy_token: ${{ secrets.GRAFANA_ACCESS_POLICY_TOKEN }}
-#          attestation: true
-#          node-version: '20'
-#
-#      - name: Locate Build Artifacts
-#        id: locate
-#        run: |
-#          # The action creates the zip in the plugin directory (or check where it puts it)
-#          # It typically names it <plugin-id>-<version>.zip
-#
-#          # Find the zip file
-#          ZIP_FILE=$(find . -maxdepth 1 -name "*.zip" | head -n 1)
-#
-#          if [ -z "$ZIP_FILE" ]; then
-#            echo "No zip file found!"
-#            ls -la
-#            exit 1
-#          fi
-#
-#          echo "Found artifact: $ZIP_FILE"
-#          echo "ARTIFACT_PATH=$ZIP_FILE" >> $GITHUB_ENV
-#
-#          # Generate MD5 for consistency with previous workflow
-#          md5sum $ZIP_FILE > $ZIP_FILE.md5
-#          echo "MD5_PATH=$ZIP_FILE.md5" >> $GITHUB_ENV
-#
-#      - name: Upload Release Assets
-#        uses: softprops/action-gh-release@v1
-#        if: startsWith(github.ref, 'refs/tags/')
-#        with:
-#          files: |
-#            grafana/plugins/dev-health-panels/${{ env.ARTIFACT_PATH }}
-#            grafana/plugins/dev-health-panels/${{ env.MD5_PATH }}
+          files: |
+            grafana/plugins/dev-health-panels/${{ env.ARTIFACT_PATH }}
+            grafana/plugins/dev-health-panels/${{ env.MD5_PATH }}
