--- a/.github/workflows/release-grafana-plugin.yml
+++ b/.github/workflows/release-grafana-plugin.yml
@@ -103,26 +103,26 @@ jobs:
         run: |
           PLUGIN_ID=${{ steps.metadata.outputs.plugin_id }}
           VERSION=${{ steps.metadata.outputs.version }}
+          
+          # Create source zip before moving dist
+          zip -r $PLUGIN_ID-$VERSION-src.zip . -x "node_modules/*" "dist/*" ".git/*" "*.zip"
+          echo "SOURCE_ASSET=$PLUGIN_ID-$VERSION-src.zip" >> $GITHUB_ENV
+          
+          # Package plugin
           mv dist $PLUGIN_ID
           zip -r $PLUGIN_ID-$VERSION.zip $PLUGIN_ID
+          echo "PLUGIN_ASSET=$PLUGIN_ID-$VERSION.zip" >> $GITHUB_ENV
 
       - name: Locate Build Artifacts
         id: locate
         run: |
-          # The action creates the zip in the plugin directory (or check where it puts it)
-          # It typically names it <plugin-id>-<version>.zip
+          ZIP_FILE=${{ env.PLUGIN_ASSET }}
 
-          # Find the zip file
-          ZIP_FILE=$(find . -maxdepth 1 -name "*.zip" | head -n 1)
-
-          if [ -z "$ZIP_FILE" ]; then
-            echo "No zip file found!"
+          if [ ! -f "$ZIP_FILE" ]; then
+            echo "Plugin zip file not found: $ZIP_FILE"
             ls -la
             exit 1
           fi
-
-          # Strip leading ./
-          ZIP_FILE=${ZIP_FILE#./}
 
           echo "Found artifact: $ZIP_FILE"
           echo "ARTIFACT_PATH=$ZIP_FILE" >> $GITHUB_ENV
@@ -145,3 +145,4 @@ jobs:
             grafana/plugins/dev-health-panels/${{ env.ARTIFACT_PATH }}
             grafana/plugins/dev-health-panels/${{ env.MD5_PATH }}
             grafana/plugins/dev-health-panels/${{ env.SHA1_PATH }}
+            grafana/plugins/dev-health-panels/${{ env.SOURCE_ASSET }}
