--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,12 @@ on:
   release:
     types: [ published ]
   workflow_dispatch:
+  workflow_call:
+    inputs:
+      tag:
+        description: 'Tag to release'
+        required: false
+        type: string
 
 
 jobs:
@@ -20,7 +26,16 @@ jobs:
       - name: Check for changes
         id: check
         run: |
-          CURRENT_TAG=${GITHUB_REF#refs/tags/}
+          if [ -n "${{ inputs.tag }}" ]; then
+            CURRENT_TAG=${{ inputs.tag }}
+            # Ensure we are on the tag if passed explicitly? 
+            # Checkout checked out the REF of the caller. 
+            # If caller is PR merge, we are at the commit that WAS tagged. 
+            # So git describe should work if we fetch tags? 
+            # But we are calculating diffs.
+          else
+            CURRENT_TAG=${GITHUB_REF#refs/tags/}
+          fi
           echo "Current tag: $CURRENT_TAG"
 
           # Try to find the previous tag reachable from the current tag's parent
