--- a/.github/workflows/release-grafana-plugin.yml
+++ b/.github/workflows/release-grafana-plugin.yml
@@ -6,6 +6,12 @@ on:
   release:
     types: [ published ]
   workflow_dispatch:
+  workflow_call:
+    inputs:
+      tag:
+        description: 'Tag to release'
+        required: false
+        type: string
 
 
 jobs:
@@ -22,7 +28,11 @@ jobs:
       - name: Check for changes
         id: check
         run: |
-          CURRENT_TAG=${GITHUB_REF#refs/tags/}
+          if [ -n "${{ inputs.tag }}" ]; then
+            CURRENT_TAG=${{ inputs.tag }}
+          else
+            CURRENT_TAG=${GITHUB_REF#refs/tags/}
+          fi
           echo "Current tag: $CURRENT_TAG"
 
           # Try to find the previous tag reachable from the current tag's parent
@@ -65,7 +75,9 @@ jobs:
       - name: Extract Version
         id: get_version
         run: |
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
+          if [ -n "${{ inputs.tag }}" ]; then
+             RAW_VERSION=${{ inputs.tag }}
+          elif [[ $GITHUB_REF == refs/tags/* ]]; then
             RAW_VERSION=${GITHUB_REF#refs/tags/}
           else
             RAW_VERSION=$(jq -r .version package.json)
@@ -139,8 +151,9 @@ jobs:
           subject-path: grafana/plugins/dev-health-panels/${{ env.ARTIFACT_PATH }}
       - name: Upload Release Assets
         uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') || inputs.tag != ''
         with:
+          tag_name: ${{ inputs.tag }}
           files: |
             grafana/plugins/dev-health-panels/${{ env.ARTIFACT_PATH }}
             grafana/plugins/dev-health-panels/${{ env.MD5_PATH }}
