--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -66,4 +66,5 @@ jobs:
     uses: ./.github/workflows/release-grafana-plugin.yml
     with:
       tag: ${{ needs.tag-and-release.outputs.new_tag }}
+      source_branch: ${{ github.event.pull_request.head.ref }}
     secrets: inherit
