--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
   "tqdm",
   "sqlalchemy",
   "clickhouse-connect",
+  "fastapi",
   "psycopg2-binary",
   "asyncpg",
   "aiosqlite",
@@ -38,6 +39,7 @@ dependencies = [
   "jira",
   "alembic",
   "motor",
+  "uvicorn",
 ]
 
 [project.optional-dependencies]
@@ -66,6 +68,10 @@ local_scheme = "dirty-tag"
 [tool.setuptools]
 packages = [
   "analytics",
+  "dev_health_ops.api",
+  "dev_health_ops.api.models",
+  "dev_health_ops.api.queries",
+  "dev_health_ops.api.services",
   "connectors",
   "connectors.utils",
   "fixtures",
