--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
   "sqlalchemy",
   "clickhouse-connect",
   "fastapi",
+  "httpx",
   "psycopg2-binary",
   "asyncpg",
   "aiosqlite",
