Summary of changes:    1. Modified fixtures/generator.py:        * Added "data" to investment_weights.        * Defined sub_categories_map for granular categorization.        * Updated generate_work_items to assign sub-category labels and include them in titles.    2. Modified config/investment_areas.yaml:        * Added a data_label rule to map labels like "analytics", "pipeline", "etl" to the "data" investment area.

--- a/config/investment_areas.yaml
+++ b/config/investment_areas.yaml
@@ -27,6 +27,13 @@ rules:
     output:
       investment_area: "quality"
 
+  - id: "data_label"
+    priority: 38
+    match:
+      label: ["data", "analytics", "pipeline", "etl"]
+    output:
+      investment_area: "data"
+
   - id: "data_component"
     priority: 40
     match:
