--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -9,16 +9,9 @@ on:
       - published
   workflow_dispatch:
     inputs:
-      version:
-        description: 'Image tag to push (defaults to `latest`)'
-        required: false
-        default: 'latest'
       image_registry:
         description: 'Override the image registry (defaults to `ghcr.io/chrisgeo/dev-health-ops`)'
         required: false
-
-env:
-  IMAGE_REGISTRY: ghcr.io/chrisgeo/dev-health-ops
 
 permissions:
   contents: read
@@ -37,20 +30,53 @@ jobs:
 
       - name: Determine version
         run: |
-          if [[ "${GITHUB_EVENT_NAME}" == "workflow_dispatch" ]]; then
-            echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
-            if [[ -n "${{ github.event.inputs.image_registry }}" ]]; then
-              echo "IMAGE_REGISTRY=${{ github.event.inputs.image_registry }}" >> $GITHUB_ENV
-            fi
-          else
-            echo "VERSION=${{ github.event_name == 'release' && github.event.release.tag_name || github.ref_name }}" >> $GITHUB_ENV
+          SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+          
+          # Calculate Dynamic Registry (lowercase)
+          # This ensures we push to the package associated with THIS repository
+          REPO_NAME_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          CURRENT_REGISTRY="ghcr.io/${REPO_NAME_LOWER}"
+          
+          # Handle Manual Registry Override
+          if [[ "${GITHUB_EVENT_NAME}" == "workflow_dispatch" && -n "${{ github.event.inputs.image_registry }}" ]]; then
+            CURRENT_REGISTRY="${{ github.event.inputs.image_registry }}"
           fi
+
+          # Default Versioning (Branch/Manual on Branch)
+          PYTHON_VERSION="0.0.0.dev0+${SHORT_SHA}"
+          DOCKER_TAG="${SHORT_SHA}"
+          
+          # Release/Tag Overrides
+          if [[ "${GITHUB_EVENT_NAME}" == "release" ]]; then
+            RELEASE_TAG="${{ github.event.release.tag_name }}"
+            PYTHON_VERSION="${RELEASE_TAG}"
+            DOCKER_TAG="${RELEASE_TAG}"
+          elif [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
+            PYTHON_VERSION="${GITHUB_REF_NAME}"
+            DOCKER_TAG="${GITHUB_REF_NAME}"
+          fi
+          
+          # Construct Tag Lists
+          # Always include the specific version tag
+          RUNNER_TAGS="${CURRENT_REGISTRY}/dev-hops-runner:${DOCKER_TAG}"
+          API_TAGS="${CURRENT_REGISTRY}/dev-hops-api:${DOCKER_TAG}"
+          
+          # Conditionally add 'latest' tag
+          # Only for 'main' branch or proper Releases/Tags
+          if [[ "${GITHUB_REF_NAME}" == "main" || "${GITHUB_EVENT_NAME}" == "release" || "${GITHUB_REF_TYPE}" == "tag" ]]; then
+             RUNNER_TAGS="${RUNNER_TAGS},${CURRENT_REGISTRY}/dev-hops-runner:latest"
+             API_TAGS="${API_TAGS},${CURRENT_REGISTRY}/dev-hops-api:latest"
+          fi
+          
+          echo "PYTHON_VERSION=${PYTHON_VERSION}" >> $GITHUB_ENV
+          echo "RUNNER_TAGS=${RUNNER_TAGS}" >> $GITHUB_ENV
+          echo "API_TAGS=${API_TAGS}" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v5
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -63,10 +89,8 @@ jobs:
           file: docker/Dockerfile
           target: runner
           build-args: |
-            SETUPTOOLS_SCM_PRETEND_VERSION=${{ env.VERSION }}
-          tags: |
-            ${{ env.IMAGE_REGISTRY }}/dev-hops-runner:${{ env.VERSION }}
-            ${{ env.IMAGE_REGISTRY }}/dev-hops-runner:latest
+            SETUPTOOLS_SCM_PRETEND_VERSION=${{ env.PYTHON_VERSION }}
+          tags: ${{ env.RUNNER_TAGS }}
           push: true
 
       - name: Build and push API image
@@ -76,8 +100,6 @@ jobs:
           file: docker/Dockerfile
           target: api
           build-args: |
-            SETUPTOOLS_SCM_PRETEND_VERSION=${{ env.VERSION }}
-          tags: |
-            ${{ env.IMAGE_REGISTRY }}/dev-hops-api:${{ env.VERSION }}
-            ${{ env.IMAGE_REGISTRY }}/dev-hops-api:latest
+            SETUPTOOLS_SCM_PRETEND_VERSION=${{ env.PYTHON_VERSION }}
+          tags: ${{ env.API_TAGS }}
           push: true
