--- a/.github/workflows/publish-on-tag.yml
+++ b/.github/workflows/publish-on-tag.yml
@@ -1,25 +1,22 @@
-name: Publish to PyPI
+name: Publish on Tag
 
 on:
-  workflow_call:
-    inputs:
-      tag:
-        description: 'The tag to build and publish'
-        required: true
-        type: string
+  push:
+    tags:
+      - 'v*'
 
 jobs:
-  build-and-publish:
-    name: Build and Publish
+  pypi-publish:
+    name: Build and Publish to PyPI
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
         with:
-          ref: ${{ inputs.tag }}
+          ref: ${{ github.ref_name }}
           fetch-depth: 0
 
       - name: Set up Python
@@ -44,3 +41,9 @@ jobs:
       - name: Publish to PyPI (OIDC)
         if: secrets.PYPI_API_TOKEN == ''
         uses: pypa/gh-action-pypi-publish@release/v1
+
+  grafana-release:
+    uses: ./.github/workflows/release-grafana-plugin.yml
+    with:
+      tag: ${{ github.ref_name }}
+    secrets: inherit
